--- a/research.html
+++ b/research.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Home</title>
+  <title>index</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">index</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="research.html">Research Paper</a></li>
         <li><a href="evidence.html">Supporting Evidence</a></li>
@@ -22,7 +22,7 @@
   </header>
 
   <main>
-    <section id="home">
+    <section id="index">
       <h1>Welcome to Your Project</h1>
       <p>Introduction to your subject and point of view goes here.</p>
     </section>
