--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="research.html">Research Paper</a></li>
         <li><a href="evidence.html">Supporting Evidence</a></li>
