--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
   <p>List your sources here in a works cited or references format, allowing your reader to learn more about your issue if they wish.</p>
 </section>
 
- <script src="animations.js"></script>
+ <!--
+non functional <script src="animations.js"></script>
+-->
  <script src="smoothscroll.js"></script>
 
 </body>
