--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
   <p>List your sources here in a works cited or references format, allowing your reader to learn more about your issue if they wish.</p>
 </section>
 
- <!--
-non functional <script src="animations.js"></script>
--->
+ <script src="animations.js"></script>
+
  <script src="smoothscroll.js"></script>
 
 </body>
