--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#index">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#research">Research Paper</a></li>
-        <li><a href="#evidence">Supporting Evidence</a></li>
-        <li><a href="#conclusion">Conclusion</a></li>
-        <li><a href="#reflection">Reflective Essay</a></li>
-        <li><a href="#references">References</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="research.html">Research Paper</a></li>
+        <li><a href="evidence.html">Supporting Evidence</a></li>
+        <li><a href="conclusion.html">Conclusion</a></li>
+        <li><a href="reflection.html">Reflective Essay</a></li>
+        <li><a href="references.html">References</a></li>
       </ul>
     </nav>
   </header>
