--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
  <script src="animations.js"></script>
 
- <script src="smoothscroll.js"></script>
+<!--  <script src="smoothscroll.js"></script> --!>
 
 </body>
 </html>
