--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     var email = document.getElementById('email').value;
     var message = document.getElementById('message').value;
     
-    emailjs.send('service_gyq9edc', 'service_gyq9edc', {
+    emailjs.send('service_gyq9edc', 'template_wp8dzzg', {
       user_name: name,
       user_email: email,
       user_message: message
