--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     var message = document.getElementById('message').value;
     
     emailjs.send('service_gyq9edc', 'template_wp8dzzg', {
-      user_name: name,
+      from_name: name,
       user_email: email,
-      user_message: message
+      message: message
     }).then(function() {
       alert('Feedback sent successfully!');
     }, function(error) {
