--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
   <h1>Welcome to My Research Project</h1>
   <p>Introduce your subject and point of view here.</p>
 </section>
- 
 <!-- About -->
 <section id="about">
   <h2>About Me</h2>
-  <p>Provide background information about you as a researcher, scholar, or professional.</p>
+  <img src="your-image-url.jpg" alt="Your Name" class="profile-picture">
+  <p>Hi, I'm Nezar Khabiry, a positive and focused student with a strong background in computer science and information analytics. Currently, I'm pursuing a Bachelor of Science in Information Science with a concentration on Information Analytics and a minor in Computer Science at the University of North Carolina Greensboro (UNCG), with an expected graduation date in 2025. I am skilled in various programming languages and platforms, including Java, Python, Rust, and R, and have experience with AWS cloud-based solutions and SQL.</p>
+  <p>I am passionate about helping and talking to people, and I am always curious and determined to learn new things. I am driven by passion and dedicate myself to activities and projects that truly matter to me. Over the past three years, I have embarked on a journey to explore my identity through a critical lens.</p>
+  <p>Throughout my academic and professional life, I have consistently gone above and beyond expectations. I have completed over 100 cumulative hours of community service, showcasing my dedication to helping others and making a positive impact. As a highly adaptable individual, I am capable of learning new technologies quickly and working well with diverse groups.</p>
+  <p>With my diverse skill set and passion for helping others, I believe I can make a significant contribution to any organization or research project that I am involved in. Thank you for taking the time to learn more about me, and I look forward to connecting with you soon.</p>
 </section>
- 
 <!-- Research Paper -->
 <section id="research">
   <h2>Research Paper</h2>
