--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
 <!-- index -->
 <section id="index">
   <h1>Welcome to My Research Project</h1>
-  <p>Introduce your subject and point of view here.</p>
+  <p>The authentic self, an exploration of gender in a broader social context. .</p>
 </section>
 <!-- About -->
 <section id="about">
   <h2>About Me</h2>
-  <img src="your-image-url.jpg" alt="Your Name" class="profile-picture">
+  <img src="your-image-url.jpg" alt=" Nezar Khabiry" class="profile-picture">
   <p>Hi, I'm Nezar Khabiry, a positive and focused student with a strong background in computer science and information analytics. Currently, I'm pursuing a Bachelor of Science in Information Science with a concentration on Information Analytics and a minor in Computer Science at the University of North Carolina Greensboro (UNCG), with an expected graduation date in 2025. I am skilled in various programming languages and platforms, including Java, Python, Rust, and R, and have experience with AWS cloud-based solutions and SQL.</p>
   <p>I am passionate about helping and talking to people, and I am always curious and determined to learn new things. I am driven by passion and dedicate myself to activities and projects that truly matter to me. Over the past three years, I have embarked on a journey to explore my identity through a critical lens.</p>
   <p>Throughout my academic and professional life, I have consistently gone above and beyond expectations. I have completed over 100 cumulative hours of community service, showcasing my dedication to helping others and making a positive impact. As a highly adaptable individual, I am capable of learning new technologies quickly and working well with diverse groups.</p>
-  <p>With my diverse skill set and passion for helping others, I believe I can make a significant contribution to any organization or research project that I am involved in. Thank you for taking the time to learn more about me, and I look forward to connecting with you soon.</p>
+  <p>With my diverse skill set and passion for helping others, I believe I can make a significant contribution to any organization or research project that I am involved in. Thank you for taking the time to learn more about me.</p>
 </section>
 <!-- Research Paper -->
-<section id="research">
-  <h2>Research Paper</h2>
-  <p>Include your research paper here, articulating the problem or issue you are addressing and including supporting evidence.</p>
+<section id="Research Abstract">
+  <h2>Research Abstract</h2>
+   <p>In this article, the author attempts to understand the characteristics of individuation and the context behind what defines someone's gender expression. Research suggests that the factors are broad and dependent on the experience of the authentic self. This work supports the response to 'An alternative perspective: gender expression is a form of individuation and authentic self' by Karen Herdzik (2021).</p>
+  <p>This exploration draws evidence from literature and surveys, analyzing responses from a college demographic. The aim is to provide background information on the broad consensus of why people attempt to conform to societal norms. The author's motivation for this research is self-exploration, as a non-binary individual. Some have attempted to cite psychological distress as a driving factor for conformity (Withers, 2020). However, this paper attempts to draw evidence for Herdzik's definition of gender, which posits that it exists as a form of individuation. To provide a point of cross-examination, a literary analysis of how people see themselves will be conducted using gathered data. This will include a look into self-identified involuntary celibates or "incels", as described by Daly and Reed (2019), in order to show how different interpretations of gender exist in hegemonic structures. This exploration may reveal a new way to interpret gender.</p>
+</section>
 </section>
 
 <!-- Supporting Evidence -->
