--- a/index.html
+++ b/index.html
@@ -45,9 +45,15 @@
 </section>
 
 <!-- Supporting Evidence -->
-<section id="evidence">
-  <h2>Supporting Evidence</h2>
-  <p>Include at least one piece of supporting evidence (a survey, fieldwork observation, or interview) that is appropriate for your research project and communicates or supports your thesis and argument.</p>
+<section id="Methods">
+  <h2>Quantitative and Qualitative</h2>
+  <p>To gauge the complexity and diversity of perspectives, we chose to gather information through two surveys. We sent out both surveys to a college demographic and posted them online to broaden the respondent base. 
+   The first survey was titled &quot;Gauging Support for Withers, R. (2020): Transgender Medicalization and the Attempt to Evade Psychological Distress.&quot; 
+   The questions were formulated based on the claims brought up in response to Withers or by Withers. We developed the questions around the Likert scale to enable numeric analysis.
+   The Likert scale gages the individual&apos;s reaction/ feeling towards a topic. &nbsp;It&apos;s important to note that these questions have come under scrutiny due to their insensitive/biased wording, which does not reflect the conclusion or methodology found in respect to Withers.
+   The second survey was designed with more open interpretations in mind to understand how individuals define what gender is and isn&apos;t.
+   It was titled &quot;Gender Diversity in a Broader Context: What Does Gender Mean to You?&quot; Both surveys will be analyzed quantitatively with statistical analysis in R, while being analyzed qualitatively and compared and contrasted with the literature.
+   We will make a broad attempt to highlight trends and identify any problematic data gathered.</p>
 </section>
 
 <!-- Conclusion -->
