--- a/evidence.html
+++ b/evidence.html
@@ -23,10 +23,10 @@
 
   <main>
     <section id="index">
-      <h1>Welcome to Your Project</h1>
-      <p>Introduction to your subject and point of view goes here.</p>
-       <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRx38Gm7kbepmE1t0dgvtlyBKlMSNxkaaedhfx-FW2RA-yemKZiAK646M1fHOOJXDGpabQqBJg2WVNd/pubchart?oid=1233707998&amp;format=interactive"></iframe>"></iframe>
-    </section>
+      <h1>Evidence and Survey Data<h1>
+      <p>This section is dedicated to showcasing the gathered data, and annotations about it</p>
+  <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRx38Gm7kbepmE1t0dgvtlyBKlMSNxkaaedhfx-FW2RA-yemKZiAK646M1fHOOJXDGpabQqBJg2WVNd/pubchart?oid=1233707998&amp;format=interactive"></iframe>
+ 
   </main>
  <script src="animations.js"></script>
 </body>
