--- a/research.html
+++ b/research.html
@@ -24,9 +24,9 @@
   <main>
     <section id="index">
       <h1>Welcome to Your Project</h1>
-     <object data="https://github.com/NezarKH/RCWEB/blob/main/Khabiry%20Nezar%20Final%20Essay.pdf" width="100%" height="600px">
+    <iframe data="https://github.com/NezarKH/RCWEB/blob/main/Khabiry%20Nezar%20Final%20Essay.pdf" width="100%" height="600px">
   <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://github.com/NezarKH/RCWEB/blob/main/Khabiry%20Nezar%20Final%20Essay.pdf">click here to download the PDF file.</a></p>
-</object>
+<iframe>
 
     </section>
   </main>
