--- a/research.html
+++ b/research.html
@@ -24,9 +24,10 @@
   <main>
     <section id="index">
       <h1>Welcome to Your Project</h1>
-<iframe src="https://github.com/NezarKH/RCWEB/blob/main/Khabiry%20Nezar%20Final%20Essay.pdf" width="100%" height="600px" style="border: none;">
-  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://github.com/NezarKH/RCWEB/blob/main/Khabiry%20Nezar%20Final%20Essay.pdf">click here to download the PDF file.</a></p>
+<iframe src="https://docs.google.com/document/d/1eSwoC7Ae4G1wU4zyrYLHl4oyKO1Mzdl0BDbZIOlS5hw/preview" width="100%" height="600px" style="border: none;">
+  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1eSwoC7Ae4G1wU4zyrYLHl4oyKO1Mzdl0BDbZIOlS5hw/edit?usp=share_link">click here to download the PDF file.</a></p>
 </iframe>
+
 
 
     </section>
