--- a/references.html
+++ b/references.html
@@ -24,7 +24,10 @@
   <main>
     <section id="index">
       <h1>Welcome to Your Project</h1>
-      <p>Introduction to your subject and point of view goes here.</p>
+      <iframe src="https://docs.google.com/document/d/1L2T1vFpP1wMb27NE63St8_bCSVthteWpMx7hbiRjg5I/edit?usp=sharing" width="100%" height="600px" style="border: none;">
+  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1L2T1vFpP1wMb27NE63St8_bCSVthteWpMx7hbiRjg5I/edit?usp=sharing">click here to download the PDF file.</a></p>
+</iframe>
+
     </section>
   </main>
  <script src="animations.js"></script>
