--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="styles.css">
   <title>index</title>
 </head>
-<body>
+ <body>
+   <div class="fullscreen-image"></div>
   <header>
     <nav>
       <ul>
