--- a/reflection.html
+++ b/reflection.html
@@ -25,6 +25,10 @@
     <section id="index">
       <h1>Welcome to Your Project</h1>
       <p>Introduction to your subject and point of view goes here.</p>
+     <iframe src="https://docs.google.com/document/d/124BT4ykOPuEcuXQmscXRPGab2u-13adO1R9fBuNP0MA/preview" width="100%" height="600px" style="border: none;">
+  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/124BT4ykOPuEcuXQmscXRPGab2u-13adO1R9fBuNP0MA/edit?usp=sharing">click here to download the PDF file.</a></p>
+</iframe>
+
     </section>
   </main>
  <script src="animations.js"></script>
