--- a/index.html
+++ b/index.html
@@ -71,21 +71,15 @@
 
 <!-- References -->
 <section id="references">
-  <h2>References</h2>
-<p><br></p>
-<p dir="ltr"><span>References&nbsp;</span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span><span>&nbsp; &nbsp;&nbsp;</span></span><span>APA</span></p>
-<p><br></p>
-<p dir="ltr"><span>******** Psychological Association. (2015). Guidelines for psychological practice **** transgender and gender nonconforming people.&nbsp;</span><span>American Psychologist</span><span>,&nbsp;</span><span>70</span><span>(9), 832&ndash;864. https://</span><span>doi.org/10.1037/a0039906</span></p>
-<p dir="ltr"><span>Daly, S. E., &amp; Reed, S. M. (2022). &ldquo;I think most of society hates us&rdquo;: A *********** thematic analysis of interviews with incels.&nbsp;</span><span>Sex Roles</span><span>,&nbsp;</span><span>86</span><span>(1&ndash;2), 14&ndash;33. https://doi.org/10.1007/s11199-021-01250-5</span></p>
-<p dir="ltr"><span>Gender paradox of suicide: ************ between gender &amp; suicide</span><span>. (n.d.). CAMS-Care. Retrieved February 26, 2023, from https://cams-care.com/resources/educational-content/the-gender-paradox-of-suicide/</span></p>
-<p dir="ltr"><span>Giles, D. C., &amp; Newbold, J. (2011). Self- and other-diagnosis in user-*** mental health online communities.&nbsp;</span><span>*********** Health Research</span><span>,&nbsp;</span><span>21</span><span>(3), 419&ndash;428. https://doi.org/10.1177/1049732310381388</span></p>
-<p dir="ltr"><span>Ging, D., &amp; Siapera, E. (Eds.). (2019).&nbsp;</span><span>Gender **** online: ************* *** new anti-feminism</span><span>. Springer International Publishing. https://doi.org/10.1007/978-3-319-96226-9</span></p>
-<p dir="ltr"><span>Herdzik, K. (2021). An alternative perspective: Gender expression is a form ** individuation and authentic self.&nbsp;</span><span>Journal of Analytical Psychology</span><span>,&nbsp;</span><span>66</span><span>(4), 833&ndash;836. https://doi.org/10.1111/1468-5922.12699</span></p>
-<p dir="ltr"><span>Jung, C. G. (1966).&nbsp;</span><span>********* works of c. G. Jung, volume 7: Two essays ** ********** psychology</span><span>. Princeton University Press. https://www.jstor.org/stable/j.ctt5hhr7s</span></p>
-<p dir="ltr"><span>Kuhlthau, C. C. (2004).&nbsp;</span><span>Seeking meaning: A process approach to library and information services</span><span>&nbsp;(2nd ed). Libraries Unlimited.</span></p>
-<p dir="ltr"><span>thisisloyal.com, L. |. (n.d.).&nbsp;</span><span>How **** adults and youth identify as transgender in the united states?</span><span>&nbsp;Williams Institute. Retrieved February 26, 2023, from https://williamsinstitute.law.ucla.edu/publications/trans-adults-united-states/</span></p>
-<p dir="ltr"><span>Thornley, L., Ball, J., Signal, L., Lawson-Te Aho, K., &amp; Rawson, E. (2015). Building community resilience: Learning from the Canterbury earthquakes.&nbsp;</span><span>Kōtuitui: New Zealand Journal of Social ******** Online</span><span>,&nbsp;</span><span>10</span><span>(1), 23&ndash;35. https://doi.org/10.1080/1177083X.2014.934846</span></p>
-<p><span>Withers, R. (2020). Transgender medicalization *** the ******* to evade psychological distress.&nbsp;</span><span>Journal of ********** Psychology</span><span>,&nbsp;</span><span>65</span><span>(5), 865&ndash;889. https://doi.org/10.1111/1468-5922.12641</span></p>
+  <h2>References Summary</h2>
+ <p>
+    The main topics covered in the references include gender expression and
+    individuation (Herdzik, 2021), transgender medicalization (Withers, 2020),
+    incel communities (Daly & Reed, 2022), online anti-feminism (Ging &
+    Siapera, 2019), and seeking meaning in library and information services
+    (Kuhlthau, 2004). The key authors in this field include Karen Herdzik,
+    Robert Withers, and Carol Kuhlthau, among others.
+  </p>
 </section>
  
  <!-- Feedback Form -->
