--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 
 <!-- Reflection -->
 <section id="reflection">
-  <h2>Reflective Essay</h2>
-  <p>Write a critical, reflective essay that addresses your development as a researcher and student in your RC.</p>
+  <h2>Reflective Essay Summary</h2>
+  <p>
+    The author reflects on their research and writing process, acknowledging the influence of their personal experiences and emotions. They also discuss the challenges they faced in creating their website from scratch and their experience with contemporary media. The author expresses disappointment in their time at Strong College, and how it affected their ethical approach to engaging with others. In addition, they contemplate their goals for their education and the impact of the course on their learning.
+  </p>
 </section>
 
 <!-- References -->
