--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <li><a href="references.html">References</a></li>
       </ul>
     </nav>
+     <input type="text" id="search-input" placeholder="Search...">
+    <div id="search-results"></div>
   </header>
 
 
@@ -104,6 +106,55 @@
     Robert Withers, and Carol Kuhlthau, among others.
   </p>
 </section>
+  
+   <script src="searchData.js"></script>
+  <script>
+    // Add the search functionality script here
+    let searchIndex;
+
+    function createIndex() {
+      searchIndex = lunr(function () {
+        this.ref('id');
+        this.field('title');
+        this.field('content');
+
+        documents.forEach(function (doc) {
+          this.add(doc);
+        }, this);
+      });
+    }
+
+    createIndex();
+
+    function search(query) {
+      const results = searchIndex.search(query);
+      displayResults(results);
+    }
+
+    document.getElementById('search-input').addEventListener('input', (e) => {
+      search(e.target.value);
+    });
+
+    function displayResults(results) {
+      const resultsContainer = document.getElementById('search-results');
+      resultsContainer.innerHTML = '';
+
+      if (results.length === 0) {
+        resultsContainer.innerHTML = '<p>No results found.</p>';
+        return;
+      }
+
+      results.forEach((result) => {
+        const doc = documents.find((doc) => doc.id === parseInt(result.ref));
+        const resultElement = document.createElement('div');
+        resultElement.innerHTML = `
+          <h3>${doc.title}</h3>
+          <p>${doc.content.slice(0, 150)}...</p>
+        `;
+        resultsContainer.appendChild(resultElement);
+      });
+    }
+  </script>
  
  <!-- Feedback Form -->
 <section id="feedback">
