--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
   <h1>Welcome to My Research Project</h1>
   <p>The authentic self, an exploration of gender in a broader social context. .</p>
 </section>
+  <!-- Search Bar -->
+<div class="search-container">
+  <input type="text" id="search-input" class="search-input" placeholder="Search..." onkeyup="searchFunction()" />
+</div>
+
+<!-- Search Results -->
+<div class="search-results" id="search-results" style="display: none;">
+  <h3>Search Results:</h3>
+  <ul id="search-results-list"></ul>
+</div>
+
 <!-- About -->
 <section id="about">
   <h2>About Me</h2>
