--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
  
    <!-- For load in animations  -->
  <script src="animations.js"></script>
+  <script src="search.js"></script>
+
  
   <!-- Email.js Impl, for feedback  -->
  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
