--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>index</title>
+   <style>
+    .full-image {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: none;
+      z-index: 100;
+      justify-content: center;
+      align-items: center;
+    }
+    .full-image img {
+      width: 100%;
+      height: auto;
+      max-height: 100%;
+    }
 
 </head>
 <body>
