--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       height: auto;
       max-height: 100%;
     }
-
+  </style>
 </head>
 <body>
   <div class="fullscreen-image" id="backgroundImage"></div>
