--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <!-- Conclusion -->
 <section id="conclusion">
   <h2>Conclusion</h2>
-  <p>Write a conclusion that addresses the relevance of your project to other people who might be connected or interested in your issue.</p>
+  <p>In conclusion, "The Compass of Validation" concept emphasizes the importance of balancing internal and external validation when defining one's gender identity within a social context. By analyzing the driving forces behind validation, individuals can attain a clearer understanding of their sense of self. The article presents a framework for evaluating one's sources of validation and calls for more research on the subject of identity. It also stresses the need for continued critical, methodical, and sensitive discussions on gender, acknowledging the inherent diversity of perspectives. Ultimately, the goal is to move closer to understanding ourselves, recognizing the limitations of externally driven beliefs and labels, and fostering a more inclusive and productive conversation on gender identity.</p>
 </section>
 
 <!-- Reflection -->
