--- a/conclusion.html
+++ b/conclusion.html
@@ -24,7 +24,9 @@
   <main>
     <section id="index">
       <h1>Welcome to Your Project</h1>
-      <p>Introduction to your subject and point of view goes here.</p>
+    <iframe src="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/preview" width="100%" height="600px" style="border: none;">
+  <p>It appears you don't have a PDF plugin for this browser. No problem, you can <a href="https://docs.google.com/document/d/1dJ4zOlDwpU5RNn09W1-pThVNgiQe3v08LSTozXrfg98/edit?usp=sharing">click here to download the PDF file.</a></p>
+</iframe>
     </section>
   </main>
  <script src="animations.js"></script>
