--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
   <link rel="stylesheet" href="styles.css">
   <title>index</title>
   <style>
+    body {
+        font-family: 'Georgia', serif;
+        background-color: #f5f5f5;
+        text-align: center;
+        padding: 50px;
+    }
+
+    h1 {
+        font-size: 48px;
+        margin-bottom: 50px;
+        color: #2c3e50;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 1.5;
+        text-align: justify;
+        margin-bottom: 20px;
+        color: #34495e;
+    }
+
+    .highlight {
+        color: #e74c3c;
+    }
+</style>
+
+  <style>
     .full-image {
       position: fixed;
       top: 0;
